Table Sorting and overlapping fixed

--- a/src/features/Components/Dashboard/ProtocolTable.scss
+++ b/src/features/Components/Dashboard/ProtocolTable.scss
@@ -15,6 +15,17 @@
     padding: 0;
   }
 
+  table thead tr th:first-child + th,
+  table tbody tr td:first-child + td {
+    display: none;
+  }
+
+  .ex-text {
+    max-width: 95%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
   .long-text {
     max-width: 100px;
  overflow: hidden;
@@ -43,7 +54,7 @@
 
   .expanded-comp {
     display: flex;
-    padding: 8px 0px 8px 22%;
+    padding: 8px 0px 8px 10%;
     background-color: white;
     // margin-left: 3%;
     
